Fix whitespace not showing on text wrap

--- a/client/src/app/annotator/annotator.component.css
+++ b/client/src/app/annotator/annotator.component.css
@@ -5,4 +5,5 @@
   font-size: 14pt;
   line-height: 22pt;
   height: 400px;
+  white-space: pre-wrap;
 }
